<resources>
    <string name="app_name">Plan zajęć WI PB</string>
    <string name="by_author">wvffle.net</string>
    <string name="lorem">Sapiente fuga eveniet placeat vel. Maiores ipsum quia quasi quo incidunt sint impedit. Et rerum dicta sunt totam.</string>
    <string name="choose_a_semester">Choose a semester</string>
    <string name="choose_a_degree">Choose a degree</string>
    <string name="choose_your_groups">Choose your groups</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="room_">"Room "</string>
    <string name="no_upcoming_classes">No upcoming classes in this week.</string>
    <string name="extra_subjects">Extra subjects</string>
    <string name="settings">Settings</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="home">Upcoming classes</string>
    <string name="subtitle">Schedule for Bialystok University of Technology</string>
    <string name="schedule_week">Week view</string>
    <string name="schedule_updates">Schedule updates</string>
    <string name="schedule_today">Schedule for today</string>
    <string name="schedule">Schedule</string>
    <string name="show_lectures">Display lectures</string>
    <string name="preferences">Preferences</string>
    <string name="updates">updates</string>
    <string name="search_hint">Search subject</string>
    <string name="channel_name">PB Notifications</string>
    <string name="channel_desc">Notifications for the PB schedule</string>
    <string name="notification_update_title">Your schedule has been updated!</string>
    <string name="notification_update_text">Tap the notification to see the changes.</string>

    <string name="class_type__pe">PE</string>
    <string name="class_type__seminar">Seminar</string>
    <string name="class_type__language">Language</string>
    <string name="class_type__project">Extra / Group project</string>
    <string name="class_type__laboratories">Laboratories</string>
    <string name="class_type__exercises">Exercises</string>
    <string name="class_type__special">Special</string>
    <string name="class_type__lecture">Lecture</string>
    <string name="class_type__unknown">Other</string>
    <string name="semester_n">Semester %d</string>
    <string name="cant_fetch_update">Cannot fetch new update. Check your connection.</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="do_you_want_to_report_a_bug">You have just shaken your phone. Do you want to report a bug?</string>
    <string name="yes">Yes</string>
    <string name="what_happened">What happened?</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="fcm_token_registeration_failed">Fetching FCM registration token failed</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="thanks_for_reporting">Thanks for reporting a bug</string>
</resources>