<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.setup.FirstSetupStep">

    <data>

        <variable
            name="viewModel"
            type="net.wvffle.android.pb.schedule.viewmodels.SetupViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TODO [#48]: Add MotionLayout -->
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:layout_weight="1"
            android:src="@drawable/ic_undraw_pizza_sharing" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-16dp"
            android:paddingBottom="10dp"
            android:text="@string/choose_your_groups"
            android:textAlignment="center"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingBottom="10dp"
            android:text="@string/lorem"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

            <include layout="@layout/divider" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:enabled="@{viewModel.checkedGroups > 0}"
                android:text="@string/finish" />


        </LinearLayout>

    </LinearLayout>
</layout>